--- a/form/register.html
+++ b/form/register.html
@@ -14,23 +14,23 @@
         <table>
             <tr>
                 <th>ID <span class="required">必須</span></th>
-                <td><input type="email" name="email" size="30" required><br>
+                <td><input type="email" name="email" size="30" placeholder="ex) xxx@morijyobi.ac.jp" required><br>
                 </td>
             </tr>
             <tr>
                 <th>パスワード<span>(半角英数字8文字以上) </span><span class="required">必須</span></th>
                 <td><input type="password" name="password" size="30" minlength="8" required>
-                    <label><input type="checkbox" name="password">パスワードを表示する</label><br>
+                    <label><input type="checkbox" name="password">  パスワードを表示する</label><br>
                 </td>
             </tr>
             <tr>
                 <th>氏名 <span class="required">必須</span></th>
-                <td>姓<input type="text" name="user_name" placeholder="ex) 盛岡" required>
-                    名<input type="text" name="user_name" placeholder="ex) 太郎" required><br></td>
+                <td>姓：<input type="text" name="user_name" placeholder="ex) 盛岡" required>
+                    名：<input type="text" name="user_name" placeholder="ex) 太郎" required><br></td>
             </tr>
             <tr>
                 <th>住所</th>
-                <td>〒<input type="text" name="post" value="020-1234" size="8" readonly><br>
+                <td>〒　<input type="text" name="post" value="020-1234" size="8" readonly><br>
                     <input type="text" name="post" value="岩手県盛岡市中央1丁目" readonly><br>
                     <input type="text" name="post" placeholder="番地"><br>
                     <input type="text" name="post" size="30" placeholder="建物名">
@@ -61,8 +61,8 @@
 
             </tr>
             <th>お得な情報・クーポン <span class="required">必須</span></th>
-            <td><label><input type="radio" name="yes" required>受け取る</label><br>
-                <label><input type="radio" name="no">受け取らない</label>
+            <td><label><input type="radio" name="yes" required>　受け取る</label><br>
+                <label><input type="radio" name="no">　受け取らない</label>
             </td>
             <tr>
                 <th>ご意見・ご希望<span>(200文字以内でご記入ください)</span></th>
