--- a/continue/index.html
+++ b/continue/index.html
@@ -23,7 +23,7 @@
                     <li class="itme"><a href="#story">STORY</a></li>
                     <li class="itme"><a href="#introduce">INTRODUCE</a></li>
                     <li class="itme"><a href="hero/hero.html">CHARACTER</a></li>
-                    <li class="itme"><a href="picture/picture.html">MOVUE</a></li>
+                    <li class="itme"><a href="picture/picture.html">MOVIE</a></li>
                     <li>
                         <a class="icon" href="https://twitter.com/kitaroanime50th" target="_blank"><img
                                 src="img/無題5_20240204173809.png" alt="Twitter"></a>
